--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,6 @@
   },
   "minimum_chrome_version": "18",
   "options_page": "options.html",
-  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+  "content_security_policy": "script-src 'self'; object-src 'self'",
   "default_locale": "en"
 }
